--- a/lcdsimple/src-glinet-be3600/CMakeLists.txt
+++ b/lcdsimple/src-glinet-be3600/CMakeLists.txt
@@ -22,8 +22,9 @@ add_subdirectory(ui/custom)
 #find_package(SDL2)
 #find_package(SDL2_image)
 #include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+find_package(Freetype REQUIRED)
 
-target_link_libraries(${PRJ_MAIN} lvgl lvgl::thorvg ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${Libdrm_LIBRARIES} m pthread)
+target_link_libraries(${PRJ_MAIN} lvgl lvgl::thorvg ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${Libdrm_LIBRARIES} ${FREETYPE_LIBRARIES} m pthread)
 #target_link_libraries(${PRJ_MAIN} lvgl lvgl::examples lvgl::demos lvgl::thorvg ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${Libdrm_LIBRARIES} m pthread)
 add_custom_target (run COMMAND ${EXECUTABLE_OUTPUT_PATH}/main DEPENDS ${PRJ_MAIN})
 
