rename to gl-be3600-lcd

--- a/lcdsimple/Makefile
+++ b/lcdsimple/Makefile
@@ -4,7 +4,7 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=lcdsimple
+PKG_NAME:=gl-be3600-lcd
 PKG_VERSION:=1.0.5
 
 include $(INCLUDE_DIR)/package.mk
@@ -33,9 +33,10 @@ MAKE_FLAGS += FPIC="$(FPIC)"
 
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/sbin $(1)/etc/assets $(1)/etc/config $(1)/etc/init.d $(1)/etc/uci-defaults
-	$(INSTALL_BIN) ./files/lcdsimple.init $(1)/etc/init.d/lcdsimple
-	$(INSTALL_BIN) ./files/lcdsimple.config $(1)/etc/config/lcdsimple
-	$(INSTALL_BIN) ./files/lcdsimple.uci-default $(1)/etc/uci-defaults/lcdsimple
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/bin/main $(1)/usr/sbin/gl-be3600-lcd-bin
+	$(INSTALL_BIN) ./files/gl-be3600-lcd.init $(1)/etc/init.d/gl-be3600-lcd
+	$(INSTALL_BIN) ./files/gl-be3600-lcd.config $(1)/etc/config/gl-be3600-lcd
+	$(INSTALL_BIN) ./files/gl-be3600-lcd.uci-default $(1)/etc/uci-defaults/gl-be3600-lcd
 	$(CP) ./files/assets/* $(1)/etc/assets/
 endef
 
